# FastLocalCorrelationCoefficients.jl

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  juliapkg.json  pyproject.toml
.github/workflows/: CI.yml  Documentation.yml
FastLocalCorrelationCoefficients/: __init__.py
dev/: index.html  search_index.js
dev/api/: index.html
dev/search/: index.html
dev/waldo/: index.html
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: api.md  index.md  waldo.md
src/: FastLocalCorrelationCoefficients.jl  flcc.jl
test/: equivalence.jl  race.jl  runtests.jl  timing.jl
v0.1.2/: index.html  search_index.js
v0.1.2/api/: index.html
v0.1.2/search/: index.html
v0.1.2/waldo/: index.html
